2004-11-22 Alexander Dymo <adymo@kdevelop.org>
 * Implemented simple VCS integrators for Clearcase, Perforce and Subversion.
 * Reenabled subversion support plugin.
 * Imported svn kioslave from kdesdk HEAD into a compat library therefore svn 
   will work on KDE<3.3.90 too.

2004-11-21 Alexander Dymo <adymo@kdevelop.org>
 * Added KDevVCSIntegrator extra interface. VCS Integrator is a plugin which is used by
   application wizard to select a version control and possibly import newly created project
   into the VCS.
 * Implemented VCS integrator for CVS (Cervisia).
 * Patched ProjectManager to load selected VCS plugin.

2004-11-20  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>

 * Ruby Source Code Debugger initial checkin
 * Based on John Birch's gdb front end, the UI is very similar. There are no
   assembly language step options or disassembly viewers, but pretty much
   everything else is much the same in ruby as for gdb/C++.
 * You can set breakpoints on file/line or file/method, watchpoints to break when
   a ruby expression is valid and catchpoints to break when an exception is thrown.
 * The Watch variable viewer allows ruby expressions to be watched, and they are
   updated on program pause.
 * A configuration option was added to enable/disable the debugger floating toolbar.
 * The debugger backend is written in pure ruby using the code from the 'debug.rb',
   source included with the ruby distribution. It is started via KProcess which handles
   redirection of stdout and stderr. The idea came from the way Laurent Julliard 
   implemented the FreeRIDE ruby debugger - it uses Distributed Ruby (like DCOP) 
   for messaging. DRuby is ruby-specific and couldn't be used though.
 * The debugger communicates with the backend via a Unix domain socket;
   commands are sent, and the replies are parsed in KDevelop in much the same way
   as the gdb debugger uses stdin and stdout to send and receive.

2004-11-17 Alexander Dymo <adymo@kdevelop.org>