@@ -1,5 +1,5 @@
 tocdir = ${kde_datadir}/kdevdocumentation/tocs
-toc_DATA = ruby.toc ruby_bugs.toc
+toc_DATA = ruby.toc ruby_bugs.toc qtruby.toc
 
 #indexdir = ${kde_datadir}/devdoctreeview/indices
 #index_DATA = ruby.index
