@@ -17,135 +17,6 @@
     </property>
     <widget class="QLabel">
         <property name="name">
-            <cstring>textLabel1_2</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>50</y>
-                <width>200</width>
-                <height>21</height>
-            </rect>
-        </property>
-        <property name="sizePolicy">
-            <sizepolicy>
-                <hsizetype>3</hsizetype>
-                <vsizetype>5</vsizetype>
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-            </sizepolicy>
-        </property>
-        <property name="text">
-            <string>Program &amp;arguments:</string>
-        </property>
-        <property name="buddy" stdset="0">
-            <cstring>interpreterEdit</cstring>
-        </property>
-        <property name="whatsThis" stdset="0">
-            <string>This is the path (or just name, if in $PATH) to Ruby interpreter. Defaults to "ruby"</string>
-        </property>
-    </widget>
-    <widget class="QCheckBox">
-        <property name="name">
-            <cstring>terminalCheckbox</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>90</y>
-                <width>578</width>
-                <height>40</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Run applications in terminal</string>
-        </property>
-        <property name="whatsThis" stdset="0">
-            <string>Check this if you want your applications to be opened in terminal window.</string>
-        </property>
-    </widget>
-    <widget class="QButtonGroup">
-        <property name="name">
-            <cstring>characterCodingRadioBox</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>180</y>
-                <width>150</width>
-                <height>160</height>
-            </rect>
-        </property>
-        <property name="title">
-            <string>Character Coding</string>
-        </property>
-        <widget class="QRadioButton">
-            <property name="name">
-                <cstring>utf8Option</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>20</x>
-                    <y>120</y>
-                    <width>104</width>
-                    <height>21</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>UTF-8</string>
-            </property>
-        </widget>
-        <widget class="QRadioButton">
-            <property name="name">
-                <cstring>sjisOption</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>20</x>
-                    <y>90</y>
-                    <width>97</width>
-                    <height>21</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>SJIS</string>
-            </property>
-        </widget>
-        <widget class="QRadioButton">
-            <property name="name">
-                <cstring>eucOption</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>20</x>
-                    <y>60</y>
-                    <width>97</width>
-                    <height>21</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>EUC</string>
-            </property>
-        </widget>
-        <widget class="QRadioButton">
-            <property name="name">
-                <cstring>asciiOption</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>20</x>
-                    <y>30</y>
-                    <width>97</width>
-                    <height>21</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>ASCII</string>
-            </property>
-        </widget>
-    </widget>
-    <widget class="QLabel">
-        <property name="name">
             <cstring>textLabel1</cstring>
         </property>
         <property name="geometry">
@@ -187,9 +58,82 @@
             </rect>
         </property>
     </widget>
+    <widget class="QLabel">
+        <property name="name">
+            <cstring>textLabel1_2_3</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>80</y>
+                <width>200</width>
+                <height>21</height>
+            </rect>
+        </property>
+        <property name="sizePolicy">
+            <sizepolicy>
+                <hsizetype>3</hsizetype>
+                <vsizetype>5</vsizetype>
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+            </sizepolicy>
+        </property>
+        <property name="text">
+            <string>Program &amp;arguments:</string>
+        </property>
+        <property name="buddy" stdset="0">
+            <cstring>interpreterEdit</cstring>
+        </property>
+        <property name="whatsThis" stdset="0">
+            <string>This is the path (or just name, if in $PATH) to Ruby interpreter. Defaults to "ruby"</string>
+        </property>
+    </widget>
+    <widget class="QLabel">
+        <property name="name">
+            <cstring>textLabel1_2</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>50</y>
+                <width>200</width>
+                <height>21</height>
+            </rect>
+        </property>
+        <property name="sizePolicy">
+            <sizepolicy>
+                <hsizetype>3</hsizetype>
+                <vsizetype>5</vsizetype>
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+            </sizepolicy>
+        </property>
+        <property name="text">
+            <string>&amp;Main program:</string>
+        </property>
+        <property name="buddy" stdset="0">
+            <cstring>interpreterEdit</cstring>
+        </property>
+        <property name="whatsThis" stdset="0">
+            <string>This is the path (or just name, if in $PATH) to Ruby interpreter. Defaults to "ruby"</string>
+        </property>
+    </widget>
     <widget class="QLineEdit">
         <property name="name">
             <cstring>programArgsEdit</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>180</x>
+                <y>80</y>
+                <width>370</width>
+                <height>21</height>
+            </rect>
+        </property>
+    </widget>
+    <widget class="QLineEdit">
+        <property name="name">
+            <cstring>mainProgramEdit</cstring>
         </property>
         <property name="geometry">
             <rect>
@@ -200,6 +144,165 @@
             </rect>
         </property>
     </widget>
+    <widget class="QButtonGroup">
+        <property name="name">
+            <cstring>runRadioBox</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>110</y>
+                <width>240</width>
+                <height>70</height>
+            </rect>
+        </property>
+        <property name="title">
+            <string>Run</string>
+        </property>
+        <widget class="QRadioButton">
+            <property name="name">
+                <cstring>mainProgramRadio</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>10</x>
+                    <y>20</y>
+                    <width>150</width>
+                    <height>21</height>
+                </rect>
+            </property>
+            <property name="text">
+                <string>Main program</string>
+            </property>
+        </widget>
+        <widget class="QRadioButton">
+            <property name="name">
+                <cstring>selectedWindowRadio</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>10</x>
+                    <y>40</y>
+                    <width>150</width>
+                    <height>21</height>
+                </rect>
+            </property>
+            <property name="text">
+                <string>Selected window</string>
+            </property>
+        </widget>
+    </widget>
+    <widget class="QButtonGroup">
+        <property name="name">
+            <cstring>characterCodingRadioBox</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>270</y>
+                <width>150</width>
+                <height>160</height>
+            </rect>
+        </property>
+        <property name="title">
+            <string>Character Coding</string>
+        </property>
+        <widget class="QRadioButton">
+            <property name="name">
+                <cstring>asciiOption</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>20</x>
+                    <y>30</y>
+                    <width>97</width>
+                    <height>21</height>
+                </rect>
+            </property>
+            <property name="text">
+                <string>ASCII</string>
+            </property>
+            <property name="buttonGroupId">
+                <number>0</number>
+            </property>
+        </widget>
+        <widget class="QRadioButton">
+            <property name="name">
+                <cstring>eucOption</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>20</x>
+                    <y>60</y>
+                    <width>97</width>
+                    <height>21</height>
+                </rect>
+            </property>
+            <property name="text">
+                <string>EUC</string>
+            </property>
+            <property name="buttonGroupId">
+                <number>1</number>
+            </property>
+        </widget>
+        <widget class="QRadioButton">
+            <property name="name">
+                <cstring>sjisOption</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>20</x>
+                    <y>90</y>
+                    <width>97</width>
+                    <height>21</height>
+                </rect>
+            </property>
+            <property name="text">
+                <string>SJIS</string>
+            </property>
+            <property name="buttonGroupId">
+                <number>2</number>
+            </property>
+        </widget>
+        <widget class="QRadioButton">
+            <property name="name">
+                <cstring>utf8Option</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>20</x>
+                    <y>120</y>
+                    <width>104</width>
+                    <height>21</height>
+                </rect>
+            </property>
+            <property name="text">
+                <string>UTF-8</string>
+            </property>
+            <property name="buttonGroupId">
+                <number>3</number>
+            </property>
+        </widget>
+    </widget>
+    <widget class="QCheckBox">
+        <property name="name">
+            <cstring>terminalCheckbox</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>190</y>
+                <width>578</width>
+                <height>40</height>
+            </rect>
+        </property>
+        <property name="text">
+            <string>Run applications in terminal</string>
+        </property>
+        <property name="whatsThis" stdset="0">
+            <string>Check this if you want your applications to be opened in terminal window.</string>
+        </property>
+    </widget>
     <widget class="QCheckBox">
         <property name="name">
             <cstring>enableFloatingToolBarBox</cstring>
@@ -207,7 +310,7 @@
         <property name="geometry">
             <rect>
                 <x>10</x>
-                <y>120</y>
+                <y>220</y>
                 <width>578</width>
                 <height>40</height>
             </rect>
